<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/dimen_12">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dimen_104"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_4"
        app:cardCornerRadius="@dimen/dimen_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFieldPopupCrudEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/dimen_8"
                    android:text="@string/edit_title"
                    android:textAlignment="center"
                    android:textColor="@color/n8"
                    android:textSize="@dimen/dimen_text_size_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:background="@color/n2" />

                <TextView
                    android:id="@+id/tvFieldPopupCrudDuplicate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/dimen_8"
                    android:text="@string/duplicate_title"
                    android:textAlignment="center"
                    android:textColor="@color/n8"
                    android:textSize="@dimen/dimen_text_size_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:background="@color/n2" />

                <TextView
                    android:id="@+id/tvFieldPopupCrudShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/dimen_8"
                    android:text="@string/share_title"
                    android:visibility="gone"
                    android:textAlignment="center"
                    android:textColor="@color/n8"
                    android:textSize="@dimen/dimen_text_size_14" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen_1"
                    android:visibility="gone"
                    android:background="@color/n2" />

                <TextView
                    android:id="@+id/tvFieldPopupCrudRemove"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:paddingVertical="@dimen/dimen_8"
                    android:text="@string/remove_title"
                    android:textAlignment="center"
                    android:textColor="@color/error"
                    android:textSize="@dimen/dimen_text_size_14" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>